add minimal projects page

--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -6,6 +6,11 @@
   padding: 0rem 2rem;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px,
               rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  background-color:#fff;
 }
 
 .navbar_name {
