--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -79,3 +79,23 @@ nav ul li {
   object-fit: cover;
   border-radius: 50%;
 }
+
+@media  screen and (max-width:480px) {
+  
+  .navbar_name h2{
+    font-size: 16px;
+  }
+  .profile_picture {
+    display: none;
+  }
+  
+  .navlink_container{
+    display: flex;
+    flex-direction: column;
+    font-size: 1rem;
+    position: fixed;
+    top: 2rem;
+    right: 0;
+  }
+
+}
