--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -35,7 +35,7 @@
     outline: none;
     border: none;
     width: 70%;
-    font-weight: bold;
+    font-weight: normal;
     font-size: 18px;
     cursor: pointer;
     display: inline-block;
@@ -51,4 +51,33 @@
 }
 .right_side p{
    font-size: 22px;
+}
+
+@media  screen and (max-width:480px) {
+  
+    .home_wrapper {
+        flex-direction: column;
+        padding: 1rem;
+        height: auto;
+    } 
+    .left_side{
+       width: 100%;
+    }
+    .right_side h1{
+        font-size: 24px;
+    }
+    .right_side p{
+        font-size: 1rem;
+
+    }
+    .right_side {
+     width: 100%;
+    }
+    .btn{
+        width: 100%;
+        font-size: 1rem;
+        padding: 0.5rem 0rem;
+        font-size: 18px;
+        font-weight: normal;
+    }
 }
