--- a/client/src/pages/About/About.module.css
+++ b/client/src/pages/About/About.module.css
@@ -39,3 +39,26 @@
 .tech_type div img {
     width: 25px;
 }
+
+@media  screen and (max-width:480px) {
+
+    .about_wrapper {
+        padding: 1rem;
+    }
+    .about_wrapper h1 {
+        font-size: 24px;
+    }
+    .skills_container {
+        flex-direction: column;
+        gap: 1.5rem;
+    }
+    .technologies_container {
+        flex-wrap: wrap;
+        margin-bottom: 2rem;
+        gap: 1.5rem;
+        justify-content: space-between;
+    }
+    .skill{
+        padding: 1rem 0.5rem;
+    }
+}
