--- a/client/src/pages/Blogs/PostsList.module.css
+++ b/client/src/pages/Blogs/PostsList.module.css
@@ -1,3 +1,10 @@
+/* Apply to all elements */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 
 
 .postlist_wrapper{
@@ -21,10 +28,33 @@
   padding: 10px;
   border-bottom: 2px solid #241616;
   width: 100%;
+  box-sizing: border-box;
 
 }
 
 .link p {
   margin: 0;    
  color: #0b80ee;
+}
+
+
+@media screen and (max-width:480px) {
+  
+ .postlist_wrapper{
+    width: 100%;
+    padding: 1rem;
+
+}
+.postlist_wrapper ul {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+.postlist_wrapper ul li {
+  width: 100%;
+}
+
+.postlist_wrapper h1 {
+  font-size: 24px;
+}
 }
