--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,5 @@
-* {
-    font-family: Manrope, "Noto Sans", sans-serif;;
+body {
+ font-family: "Figtree", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
