--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -18,6 +18,8 @@
   justify-content: space-between;
   align-items: center;
   gap: 0.75rem;
+  color: #000;
+  text-decoration: none;
 }
 
 .parent_logo {
