--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -2,19 +2,25 @@
 
 .home_wrapper {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     gap: 2rem;
     align-items:start;
     height: calc(100vh - 5rem);
-    padding: 3rem 10rem 0rem;
-    
+    align-items: center;
+    justify-content: center;
+    padding: 5rem 10rem;
 
+}
+.parent_wrapper{
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
 
 }
 .left_side{
-    width: 550px;
-    height: 450px;
-    border-radius: 20px;
+    width: 200px;
+    height: 200px;
+    border-radius:50%;
     overflow: hidden;
      display: flex;
   justify-content: center;
@@ -31,26 +37,51 @@
     color: white;
     background-color: #0b80ee;
     border-radius: 20px;
-    padding: 1rem;
     outline: none;
     border: none;
-    width: 70%;
     font-weight: normal;
     font-size: 18px;
     cursor: pointer;
     display: inline-block;
     text-align: center;
     text-decoration: none;
+    padding: 0.5rem 1rem;
 }
 
 .right_side{
     text-align: left;
-}
-.right_side h1{
-   font-size: 48px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
 .right_side p{
+   font-size: 36px;
+}
+ q{
    font-size: 22px;
+   font-weight: 500;
+}
+.links_container {
+    display: flex;
+    gap: 1rem;
+}
+.links_container a:hover {
+    background-color: #2d96f8;
+}
+.right_side p:nth-of-type(1){
+    font-size: 36px;
+    padding: 0;
+    margin: 0;
+    font-weight: bold;
+}
+
+.right_side p:nth-of-type(2){
+    font-size: 30px;
+    color: rgba(0, 0, 0, 0.555);
+    font-weight: 500;
+    margin: 0;
+    padding: 0;
 }
 
 @media  screen and (max-width:480px) {
