add home responsivenes

--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -90,11 +90,17 @@
         flex-direction: column;
         padding: 1rem;
         height: auto;
+        align-items: unset;
     } 
-    .left_side{
-       width: 100%;
+    .parent_wrapper {
+        gap: 1rem;
+        flex-wrap: wrap;
     }
-    .right_side h1{
+
+    .right_side p:nth-of-type(1){
+        font-size: 26px;
+    }
+    .right_side p:nth-of-type(2){
         font-size: 24px;
     }
     .right_side p{
@@ -106,10 +112,14 @@
     }
     .btn{
         width: 100%;
-        font-size: 1rem;
-        padding: 0.5rem 0rem;
-        font-size: 18px;
+        font-size: 1rem !important;
+        padding: 0.5rem;
         font-weight: normal;
         margin-bottom: 2rem;
+
+    }
+    .links_container{
+      justify-content: center;
+      align-items:center;
     }
 }
