--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -103,7 +103,7 @@
     .right_side p:nth-of-type(2){
         font-size: 24px;
     }
-    .right_side p{
+    .home_wrapper q{
         font-size: 1rem;
 
     }
