--- a/client/src/pages/About/About.module.css
+++ b/client/src/pages/About/About.module.css
@@ -57,12 +57,12 @@
 }
 .warsaw42 img {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
 }
 .intern_photo img {
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: cover;
 
 }
@@ -96,4 +96,11 @@
     .skill{
         padding: 1rem 0.5rem;
     }
+    .intern_photo {
+        width: 100%;
+    }
+    .warsaw42{
+        width: 100%;
+    }
+    
 }
