--- a/client/src/pages/About/About.module.css
+++ b/client/src/pages/About/About.module.css
@@ -79,6 +79,7 @@
 
     .about_wrapper {
         padding: 1rem;
+        font-size: 1rem;
     }
     .about_wrapper h1 {
         font-size: 24px;
