add responsiveness for the tablets

--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -137,7 +137,7 @@ nav ul li {
 }
 
 
-@media  screen and (max-width:660px) {
+@media  screen and (max-width:600px) {
 
   .hamburger_container{
   display: block;
@@ -184,3 +184,52 @@ nav ul li {
   }
 
 }
+
+@media  screen and (max-width:768px) {
+
+  .hamburger_container{
+  display: block;
+}
+  .hamburger_container{
+  display: block;
+}
+.navbar_wrapper {
+  padding: 0 4rem;
+  justify-content: space-between;
+  align-items:center;
+}
+
+  .navbar_name h2{
+    font-size: 22px;
+  }
+  
+  .navlink_container{
+    display: none;
+    flex-direction: column;
+    font-size: 17px;
+    position: fixed;
+    top: 2rem;
+    right: 0;
+    background-color: #000000b0;
+    padding: 1rem 2rem;
+    align-items: start;
+  }
+  .navlink_container li a {
+    color: #fff;
+  }
+
+  .navlink_container.active {
+    display: flex;
+  }
+  .download_btn img {
+    display: none;
+  }
+  .download_btn p{
+    color: #4094e2;
+  }
+  .download_btn a {
+    font-size: 16px;
+  }
+
+}
+
