--- a/client/src/pages/Contact/Contact.module.css
+++ b/client/src/pages/Contact/Contact.module.css
@@ -112,3 +112,33 @@ textarea{
         justify-content: left;
     }
 }
+
+@media screen and (max-width: 768px) {
+    
+    .contact_wrapper {
+        padding: 2rem;
+        font-size: 17px;
+
+    }
+    .contact_wrapper h1 {
+        font-size: 28px;
+    }
+    .contact_body form {
+        display: flex;
+        flex-direction: column;
+
+    }
+    .contact_body form label {
+        text-align: left;
+    }
+    .contact_body {
+        flex-direction: column;
+        width: 100%;
+        gap: 2rem;
+    }
+    .contact_links {
+        flex-wrap: wrap;
+        flex-direction: unset;
+        justify-content: left;
+    }
+}
