--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -123,3 +123,43 @@
       align-items:center;
     }
 }
+
+@media screen and (max-width: 768px) {
+
+   .home_wrapper {
+        flex-direction: column;
+        padding: 2rem;
+        height: auto;
+        align-items: unset;
+    } 
+    .parent_wrapper {
+        gap: 1rem;
+        flex-wrap: wrap;
+    }
+
+    .right_side p:nth-of-type(1){
+        font-size: 30px;
+    }
+    .right_side p:nth-of-type(2){
+        font-size: 26px;
+    }
+    .home_wrapper q{
+        font-size: 20px;
+
+    }
+    .right_side {
+     width: 100%;
+    }
+    .btn{
+        width: 100%;
+        font-size: 17px !important;
+        padding: 0.5rem;
+        font-weight: normal;
+        margin-bottom: 2rem;
+
+    }
+    .links_container{
+      justify-content: center;
+      align-items:center;
+    }
+}
