add all media queries

--- a/client/src/pages/Contact/Contact.module.css
+++ b/client/src/pages/Contact/Contact.module.css
@@ -140,5 +140,26 @@ textarea{
         flex-wrap: wrap;
         flex-direction: unset;
         justify-content: left;
+    }   
+}
+@media screen and (max-width:992px) {
+   .contact_wrapper {
+    padding: 0rem 2rem;
+   }
+   .contact_body {
+    flex-direction: column;
+    width: 100%;
+    gap: 2rem;
+   }
+  
+     .contact_links {
+        flex-wrap: wrap;
+        flex-direction: unset;
+        justify-content: left;
+    } 
+}
+@media screen and (max-width:1200px) {
+    .contact_wrapper {
+        padding: 0rem 4rem;
     }
 }
