--- a/client/src/pages/About/About.module.css
+++ b/client/src/pages/About/About.module.css
@@ -135,3 +135,15 @@
         width: 100%;
     }
 }
+
+@media screen and (max-width:992px) {
+    .about_wrapper {
+        padding: 0rem 2rem;
+    }
+}
+
+@media screen and (max-width:1200px) {
+    .about_wrapper {
+        padding: 0rem 4rem;
+    }
+}
