--- a/client/src/pages/Posts/Posts.module.css
+++ b/client/src/pages/Posts/Posts.module.css
@@ -56,3 +56,13 @@
         font-size: 17px;
     }
 }
+@media screen and (max-width:992px) {
+    .postpage_container{
+        padding: 0rem 2rem;
+    }
+}
+@media screen and (max-width:1200px) {
+    .postpage_container {
+        padding: 0rem 4rem;
+    }
+}
